# projectAlpha

./: CMakeLists.txt  README.me
Utility/: Constants.h
include/: CutsceneState.h  Direction.h  Entity.h  GameEngine.h  GameState.h  GameplayState.h  Input.h  InputHandler.h  Painter.h  Player.h  StateChangeRequest.h  Type.h
include/entities/: Player.h
include/states/: GameState.h  GameplayState.h  Stage.h  StageGenerator.h
src/: GameEngine.cpp  GameplayState.cpp  InputHandler.cpp  Painter.cpp  main.cpp
src/entities/: Player.cpp
src/states/: CutSceneState.cpp  GameplayState.cpp
